@@ -1,3 +1,8 @@
+Wed Oct 19 19:26:15 2005  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* parse.y (rb_gc_mark_parser): get rid of segfault with old yacc.
+	  fixed: [ruby-dev:27439]
+
 Mon Oct 17 21:18:50 2005  Nobuyoshi Nakada  <nobu@ruby-lang.org>
 
 	* parse.y (parser_heap): byacc never free parser stack.
